--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Transportation Survey</h1>
-  <form>
+  <form id="transitForm">
     <div id="Q1">
       <p>Which of these are your main forms of travel?</p>
       <input type="checkbox" name="main-transport" value="bike" > Biking <br>
@@ -39,14 +39,14 @@
 
     <button type="submit">Submit</button>
   </form>
-
   <div class="answerContainer">
+    <p>Your main forms of travel are:</p>
     <div id="Q1Answer">
     </div>
-
+    <p>Your main reasons to travel are:</p>
     <div id="Q2Answer">
     </div>
-
+    <p>Your main days for travel are:</p>
     <div id="Q3Answer">
     </div>
   </div>
